--- a/configs/config_example.json
+++ b/configs/config_example.json
@@ -85,6 +85,28 @@
             }
         }
     },
+    #Count options
+    "COUNTING": { #options for trimming for each sample/condition
+         "Dm6": {
+            "untreated": {
+                "std": {# See above
+                    "COUNTENV": "countreads", #see QC
+                    "COUNTBIN": "featurecounts",
+                    [
+                        {  # counting options here, --paired is not required, will be resolved by rules, annotation is resolved from Annotation options
+                           "-f": "",
+                           "--fraction": "",
+                           "-p": "",
+                           "-O": "",
+                           "-M": "",
+                           "-T": "5",
+                           "-t": "miRNA"
+                        }
+                    ]
+               }
+           }
+       }
+    },
     #Annotation options
     "ANNOTATE" : "-w ON", #-w ON enables one line per feature annotation, including start/end of the feature, output can become quite large, disable by adding empty string ("") as value
     "ANNOFEATURE" : "", #You can specify a set of certain features to annotate here, e.g. 'exon' will only annotate exon overlaps, disable specific feature annotation by adding empty string ("") as value
