--- a/configs/config_example.json
+++ b/configs/config_example.json
@@ -1,7 +1,7 @@
 {
-    "WORKFLOWS": "QC,TRIMMING,MAPPING,COUNTING,UCSC,ANNOTATE", #which workflows do you want to run, consider order of workflows, i.e. QC > TRIMMING > MAPPING > rest
+    "WORKFLOWS": "QC,TRIMMING,MAPPING,COUNTING,UCSC,ANNOTATE", #which workflows do you want to run ####consider order of workflows, i.e. QC > TRIMMING > MAPPING
     "REFERENCE": "GENOMES", #where to find the reference genomes
-    "BINS": "Workflow/scripts", #where to find the scripts used in the workflow, if you soft-link the snake git to Workflow, use this path
+    "BINS": "snakes/scripts", #where to find the scripts used in the workflow, if you soft-link the snake git to Workflow, use this path
     "MAXTHREADS": "20", #maximum number of cores to use
     "GENOME": { #which genomes to use and how the reference fasta is named, key is subdir of REFERENCE and value is name of fasta
         "Dm6": "dm6"
@@ -20,15 +20,22 @@
             }
         }
     },
-    "SAMPLES":{  #which samples to analyze
+    "SAMPLES": {  #which samples to analyze
         "Dm6": { #key for source and genome
             "untreated": {      # sample id
                 "std": ["GSM461177_untreat_paired_subset_r1","GSM461177_untreat_paired_subset_r2"] # setup and list of samples you whish to analyze
-            }
+                         }
+               }
+    },
+    "SEQUENCING" : {
+        "Dm6": { #key for source and genome
+               "untreated": {      # sample id
+                   "std": "single" # or paired
+               }
         }
     },
     #QC options
-    "QC":{
+    "QC": {
         "RUN": "ON", #set to 'OFF' to skip QC
         "Dm6": { #key for source and genome
             "untreated": {      # sample id
@@ -90,8 +97,9 @@
          "Dm6": {
             "untreated": {
                 "std": {# See above
-                    "COUNTENV": "countreads", #see QC
-                    "COUNTBIN": "featurecounts",
+                    "ENV": "countreads", #see QC
+                    "BIN": "featurecounts",
+                    "OPTIONS":
                     [
                         {  # counting options here, --paired is not required, will be resolved by rules, annotation is resolved from Annotation options
                            "-f": "",
@@ -100,7 +108,7 @@
                            "-O": "",
                            "-M": "",
                            "-T": "5",
-                           "-t": "miRNA"
+                           "-t": "exon"
                         }
                     ]
                }
@@ -108,9 +116,34 @@
        }
     },
     #Annotation options
-    "ANNOTATE" : "-w ON", #-w ON enables one line per feature annotation, including start/end of the feature, output can become quite large, disable by adding empty string ("") as value
-    "ANNOFEATURE" : "", #You can specify a set of certain features to annotate here, e.g. 'exon' will only annotate exon overlaps, disable specific feature annotation by adding empty string ("") as value
-    "ANNOTATION": { #which annotation to use
-        "Dm6": "dm6.gff.gz"
-    }
+    "ANNOTATE" : {
+         "Dm6": {
+            "untreated": {
+                "std": { # See above
+                    "OPTIONS":
+                    [
+                        "-w": "ON", #-w ON enables one line per feature annotation, including start/end of the feature, output can become quite large, disable by adding empty string ("") as value
+                        "ANNOFEATURE" : "", #You can specify a set of certain features to annotate here, e.g. 'exon' will only annotate exon overlaps, disable specific feature annotation by adding empty string ("") as value
+                        "ANNOTATIONFILE": "dm6.gff.gz"
+                    ]
+                }
+            }
+         }
+     },
+    "UCSC" : {
+         "Dm6": {
+            "untreated": {
+                "std": { # See above
+                    "OPTIONS":
+                    [
+                        "-n": "DM6 Standard Mapping", #name of the hub
+                        "-s" : "dm6_st", #short name for hub
+                        "-l" : "UCSC DM6 Standard Mapping", #long name for track
+                        "-b" : "UCSC dm6 std", #short name for track
+                        "ANNOTATION": "dm6.gff.gz"
+                    ]
+                }
+            }
+         }
+     }
 }
