--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "scripts"]
 	path = scripts
-	url = git@github.com:jfallmann/Workflowscrips.git
+	url = https://github.com/jfallmann/Workflowscrips.git
