--- a/envs/snakemake.yaml
+++ b/envs/snakemake.yaml
@@ -52,6 +52,7 @@ dependencies:
   - googleapis-common-protos=1.6.0
   - graphite2=1.3.13
   - graphviz=2.40.1
+  - grep=2.14
   - harfbuzz=2.4.0
   - icu=64.2
   - idna=2.8
