--- a/configs/config_example.json
+++ b/configs/config_example.json
@@ -43,6 +43,10 @@
                                      "std": {
                                          "ENV" : "fastqc",  # name of conda env for QC
                                          "BIN" : "fastqc" # binary for trimming
+                                         "OPTIONS":
+                                         [
+                                             {}
+                                         ]
                                      }
                               }
                }
