typo fix in example configd

--- a/configs/config_example.json
+++ b/configs/config_example.json
@@ -42,7 +42,7 @@
                  "untreated": {      # sample id
                                      "std": {
                                          "ENV" : "fastqc",  # name of conda env for QC
-                                         "BIN" : "fastqc" # binary for trimming
+                                         "BIN" : "fastqc", # binary for trimming
                                          "OPTIONS":
                                          [
                                              {}
