--- a/envs/deseq2.yaml
+++ b/envs/deseq2.yaml
@@ -83,6 +83,7 @@ dependencies:
   - r-bit64=0.9_7
   - r-bitops=1.0_6
   - r-blob=1.2.0
+  - r-catools=1.17.1.2
   - r-checkmate=1.9.4
   - r-cli=1.1.0
   - r-cluster=2.1.0
@@ -99,16 +100,20 @@ dependencies:
   - r-formula=1.2_3
   - r-futile.logger=1.4.3
   - r-futile.options=1.0.1
+  - r-gdata=2.18.0
   - r-ggplot2=3.2.1
   - r-glue=1.3.1
+  - r-gplots=3.0.1.1
   - r-gridextra=2.3
   - r-gtable=0.3.0
+  - r-gtools=3.8.1
   - r-highr=0.8
   - r-hmisc=4.2_0
   - r-htmltable=1.13.2
   - r-htmltools=0.4.0
   - r-htmlwidgets=1.5.1
   - r-jsonlite=1.6
+  - r-kernsmooth=2.23_15
   - r-knitr=1.25
   - r-labeling=0.3
   - r-lambda.r=1.2.4
@@ -176,3 +181,5 @@ dependencies:
   - xz=5.2.4
   - zlib=1.2.11
   - zstd=1.4.3
+prefix: /home/fall/anaconda3/envs/deseq2
+
