Stranded strategy configurable via config

--- a/configs/config_example.json
+++ b/configs/config_example.json
@@ -43,7 +43,7 @@
                                     "star": "single" # setup and sequencing type, either paired or single
                              },
                  "paired": {      # sample id
-                                  "star": "paired" # setup and sequencing type, either paired or single
+                                  "star": "paired,fr" # setup and sequencing type, either paired or single
                            }
                }
     },
