updated snakemake env

--- a/envs/snakemake.yaml
+++ b/envs/snakemake.yaml
@@ -7,32 +7,36 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - aioeasywebdav=2.4.0
-  - aiohttp=3.6.1
+  - aiohttp=3.6.2
   - appdirs=1.4.3
-  - asn1crypto=1.0.1
   - async-timeout=3.0.1
   - attrs=19.3.0
   - bcrypt=3.1.7
   - biopython=1.74
-  - boto3=1.9.250
-  - botocore=1.12.250
+  - boto3=1.10.40
+  - botocore=1.13.40
   - bzip2=1.0.8
-  - ca-certificates=2019.9.11
-  - cachetools=2.1.0
+  - ca-certificates=2019.11.28
+  - cachetools=3.1.1
   - cairo=1.16.0
-  - certifi=2019.9.11
-  - cffi=1.13.0
+  - certifi=2019.11.28
+  - cffi=1.13.2
   - chardet=3.0.4
   - configargparse=0.13.0
-  - cryptography=2.7
+  - cryptography=2.8
   - datrie=0.8
-  - decorator=4.4.0
+  - decorator=4.4.1
   - docutils=0.15.2
   - dropbox=9.4.0
   - expat=2.2.5
   - fftw=3.3.8
   - filechunkio=1.8
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=2.001
+  - font-ttf-source-code-pro=2.030
+  - font-ttf-ubuntu=0.83
   - fontconfig=2.13.1
+  - fonts-conda-forge=1
   - freetype=2.10.0
   - fribidi=1.0.5
   - ftputil=3.4
@@ -41,95 +45,96 @@ dependencies:
   - ghostscript=9.22
   - giflib=5.1.7
   - gitdb2=2.0.6
-  - gitpython=3.0.3
+  - gitpython=3.0.5
   - glib=2.58.3
   - gobject-introspection=1.58.2
   - google-api-core=1.14.3
-  - google-auth=1.6.3
-  - google-cloud-core=1.0.3
-  - google-cloud-storage=1.20.0
-  - google-resumable-media=0.4.1
+  - google-auth=1.9.0
+  - google-cloud-core=1.1.0
+  - google-cloud-storage=1.23.0
+  - google-resumable-media=0.5.0
   - googleapis-common-protos=1.6.0
   - graphite2=1.3.13
-  - graphviz=2.40.1
-  - grep=2.14
+  - graphviz=2.42.3
   - harfbuzz=2.4.0
   - icu=64.2
   - idna=2.8
-  - imagemagick=7.0.8_68
+  - imagemagick=7.0.9_7
+  - importlib_metadata=1.3.0
   - jbig=2.1
   - jinja2=2.10.3
   - jmespath=0.9.4
   - jpeg=9c
-  - jsonschema=2.6.0
+  - jsonschema=3.2.0
   - libblas=3.8.0
   - libcblas=3.8.0
   - libcroco=0.6.13
   - libffi=3.2.1
-  - libgcc-ng=9.1.0
+  - libgcc-ng=9.2.0
   - libgfortran-ng=7.3.0
   - libiconv=1.15
   - liblapack=3.8.0
   - libopenblas=0.3.7
   - libpng=1.6.37
-  - libprotobuf=3.10.0
-  - librsvg=2.46.2
-  - libstdcxx-ng=9.1.0
-  - libtiff=4.0.10
+  - libprotobuf=3.11.2
+  - librsvg=2.46.4
+  - libstdcxx-ng=9.2.0
+  - libtiff=4.1.0
   - libtool=2.4.6
   - libuuid=2.32.1
   - libwebp=1.0.2
   - libxcb=1.13
-  - libxml2=2.9.9
+  - libxml2=2.9.10
   - lz4-c=1.8.3
   - markupsafe=1.1.1
-  - more-itertools=7.2.0
-  - multidict=4.5.2
+  - more-itertools=8.0.2
+  - multidict=4.6.1
   - natsort=6.0.0
   - ncurses=6.1
-  - networkx=2.3
-  - numpy=1.17.2
+  - networkx=2.4
+  - numpy=1.17.3
   - openjpeg=2.3.1
-  - openssl=1.1.1c
-  - pandas=0.25.1
+  - openssl=1.1.1d
+  - pandas=0.25.3
   - pango=1.42.4
-  - paramiko=2.6.0
+  - paramiko=2.7.1
   - pcre=8.43
   - perl=5.26.2
-  - pip=19.3
+  - pip=19.3.1
   - pixman=0.38.0
   - pkg-config=0.29.2
   - prettytable=0.7.2
-  - protobuf=3.10.0
-  - psutil=5.6.3
+  - protobuf=3.11.2
+  - psutil=5.6.7
   - pthread-stubs=0.4
-  - pyasn1=0.4.6
+  - pyasn1=0.4.8
   - pyasn1-modules=0.2.7
   - pycparser=2.19
-  - pygments=2.4.2
+  - pygments=2.5.2
   - pygraphviz=1.3
   - pynacl=1.3.0
-  - pyopenssl=19.0.0
+  - pyopenssl=19.1.0
+  - pyrsistent=0.15.6
   - pysftp=0.2.9
   - pysocks=1.7.1
   - python=3.7.1
   - python-dateutil=2.8.0
   - python-irodsclient=0.7.0
   - pytz=2019.3
-  - pyyaml=5.1.2
+  - pyyaml=5.2
   - ratelimiter=1.2.0
   - readline=7.0
   - requests=2.22.0
-  - rsa=3.4.2
+  - rsa=4.0
   - s3transfer=0.2.1
-  - setuptools=41.4.0
-  - six=1.12.0
+  - setuptools=42.0.2
+  - six=1.13.0
   - smmap2=2.0.5
-  - snakemake=5.7.1
-  - snakemake-minimal=5.7.1
+  - snakemake=5.8.2
+  - snakemake-minimal=5.8.2
   - sqlite=3.28.0
-  - tk=8.6.9
-  - urllib3=1.25.6
+  - tk=8.6.10
+  - urllib3=1.25.7
   - wheel=0.33.6
   - wrapt=1.11.2
   - xmlrunner=1.7.7
@@ -140,16 +145,17 @@ dependencies:
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
-  - xorg-libxpm=3.5.12
+  - xorg-libxpm=3.5.13
   - xorg-libxrender=0.9.10
   - xorg-libxt=1.1.5
   - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
   - xz=5.2.4
-  - yaml=0.1.7
+  - yaml=0.2.2
   - yarl=1.3.0
   - zipp=0.6.0
   - zlib=1.2.11
-  - zstd=1.4.0
-  
+  - zstd=1.4.4
+prefix: /home/fall/anaconda3/envs/snakemake
+
