--- a/envs/snakemake.yaml
+++ b/envs/snakemake.yaml
@@ -100,6 +100,7 @@ dependencies:
   - paramiko=2.7.1
   - pcre=8.43
   - perl=5.26.2
+  - pigz=2.3.4
   - pip=19.3.1
   - pixman=0.38.0
   - pkg-config=0.29.2
@@ -157,5 +158,4 @@ dependencies:
   - zipp=0.6.0
   - zlib=1.2.11
   - zstd=1.4.4
-prefix: /home/fall/anaconda3/envs/snakemake
 
