--- a/envs/dexseq.yaml
+++ b/envs/dexseq.yaml
@@ -8,6 +8,7 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - _r-mutex=1.0.1
+  - bcftools=1.8
   - binutils_impl_linux-64=2.33.1
   - binutils_linux-64=2.33.1
   - bioconductor-annotate=1.64.0
@@ -37,7 +38,11 @@ dependencies:
   - bzip2=1.0.8
   - ca-certificates=2019.11.28
   - cairo=1.16.0
+  - certifi=2019.11.28
   - curl=7.65.3
+  - cycler=0.10.0
+  - dbus=1.13.6
+  - expat=2.2.5
   - fontconfig=2.13.1
   - freetype=2.10.0
   - fribidi=1.0.5
@@ -49,23 +54,32 @@ dependencies:
   - glib=2.58.3
   - graphite2=1.3.13
   - gsl=2.5
+  - gst-plugins-base=1.14.5
+  - gstreamer=1.14.5
   - gxx_impl_linux-64=7.3.0
   - gxx_linux-64=7.3.0
   - harfbuzz=2.4.0
+  - htseq=0.11.2
+  - htslib=1.7
   - icu=64.2
   - jpeg=9c
+  - kiwisolver=1.1.0
   - krb5=1.16.4
   - ld_impl_linux-64=2.33.1
   - libblas=3.8.0
   - libcblas=3.8.0
+  - libclang=9.0.1
   - libcurl=7.65.3
+  - libdeflate=1.5
   - libedit=3.1.20170329
   - libffi=3.2.1
+  - libgcc=7.2.0
   - libgcc-ng=9.2.0
   - libgfortran-ng=7.3.0
   - libgomp=9.2.0
   - libiconv=1.15
   - liblapack=3.8.0
+  - libllvm9=9.0.1
   - libopenblas=0.3.7
   - libpng=1.6.37
   - libssh2=1.8.2
@@ -73,15 +87,28 @@ dependencies:
   - libtiff=4.1.0
   - libuuid=2.32.1
   - libxcb=1.13
+  - libxkbcommon=0.9.1
   - libxml2=2.9.10
   - lz4-c=1.8.3
   - make=4.2.1
+  - matplotlib=3.1.2
+  - matplotlib-base=3.1.2
   - ncurses=6.1
+  - nspr=4.24
+  - nss=3.47
+  - numpy=1.17.3
   - openssl=1.1.1d
   - pango=1.42.4
   - pcre=8.43
+  - pip=19.3.1
   - pixman=0.38.0
   - pthread-stubs=0.4
+  - pyparsing=2.4.6
+  - pyqt=5.12.3
+  - pysam=0.14.1
+  - python=3.6.7
+  - python-dateutil=2.8.1
+  - qt=5.12.5
   - r-acepack=1.4.1
   - r-askpass=1.1
   - r-assertthat=0.2.1
@@ -186,9 +213,15 @@ dependencies:
   - r-yaml=2.2.0
   - r-zeallot=0.1.0
   - readline=8.0
+  - samtools=1.6
   - sed=4.7
+  - setuptools=45.0.0
+  - six=1.14.0
+  - sqlite=3.30.1
   - tk=8.6.10
   - tktable=2.10
+  - tornado=6.0.3
+  - wheel=0.33.6
   - xorg-kbproto=1.0.7
   - xorg-libice=1.0.10
   - xorg-libsm=1.2.3
@@ -203,4 +236,7 @@ dependencies:
   - xz=5.2.4
   - zlib=1.2.11
   - zstd=1.4.4
+  - pip:
+    - pyqt5-sip==4.19.18
+    - pyqtwebengine==5.12.1
 
