--- a/envs/snakemake.yaml
+++ b/envs/snakemake.yaml
@@ -10,9 +10,11 @@ dependencies:
   - aioeasywebdav=2.4.0
   - aiohttp=3.6.2
   - appdirs=1.4.3
+  - arrow=0.15.5
   - async-timeout=3.0.1
   - attrs=19.3.0
   - bcrypt=3.1.7
+  - binaryornot=0.4.4
   - biopython=1.74
   - boto3=1.12.0
   - botocore=1.15.0
@@ -23,7 +25,9 @@ dependencies:
   - certifi=2019.11.28
   - cffi=1.13.2
   - chardet=3.0.4
+  - click=7.0
   - configargparse=1.0
+  - cookiecutter=1.7.0
   - cryptography=2.8
   - datrie=0.8
   - decorator=4.4.1
@@ -41,6 +45,7 @@ dependencies:
   - freetype=2.10.0
   - fribidi=1.0.5
   - ftputil=3.4
+  - future=0.18.2
   - gdk-pixbuf=2.38.2
   - gettext=0.19.8.1
   - ghostscript=9.22
@@ -65,6 +70,7 @@ dependencies:
   - ipython_genutils=0.2.0
   - jbig=2.1
   - jinja2=2.11.1
+  - jinja2-time=0.2.0
   - jmespath=0.9.4
   - jpeg=9c
   - jsonschema=3.2.0
@@ -107,6 +113,7 @@ dependencies:
   - pip=20.0.2
   - pixman=0.38.0
   - pkg-config=0.29.2
+  - poyo=0.5.0
   - prettytable=0.7.2
   - protobuf=3.11.4
   - psutil=5.6.7
@@ -142,6 +149,7 @@ dependencies:
   - traitlets=4.3.3
   - urllib3=1.25.7
   - wheel=0.34.2
+  - whichcraft=0.6.1
   - wrapt=1.12.0
   - xmlrunner=1.7.7
   - xorg-kbproto=1.0.7
