--- a/docs/source/requirements.txt
+++ b/docs/source/requirements.txt
@@ -2,7 +2,16 @@ sphinx
 sphinxcontrib-napoleon
 sphinx-argparse
 sphinx_rtd_theme
-docutils==0.12
+docutils
+autodoc
+doctest
+intersphinx
+todo
+coverage
+mathjax
+ifconfig
+viewcode
+githubpages
 recommonmark
 configargparse
 appdirs
