star env and config updates, fixes in template and updates in Configurator and RunSnakemake

--- a/envs/star.yaml
+++ b/envs/star.yaml
@@ -7,9 +7,8 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - bzip2=1.0.8
-  - ca-certificates=2019.6.16
+  - ca-certificates=2019.11.28
   - curl=7.65.3
-  - grep=2.14
   - krb5=1.16.3
   - libcurl=7.65.3
   - libdeflate=1.0
@@ -18,11 +17,9 @@ dependencies:
   - libssh2=1.8.2
   - libstdcxx-ng=9.1.0
   - ncurses=6.1
-  - openssl=1.1.1c
-  - pigz=2.3.4
+  - openssl=1.1.1d
   - samtools=1.9
-  - star=2.7.1a
+  - star=2.7.3a
   - tk=8.6.9
   - xz=5.2.4
   - zlib=1.2.11
-
